--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+.Rproj.user
+
+# user added
+temp/*
+scratch.R
+dataExternal/*
+results/*
+*.Rproj
+*.rds
